# WiFi-Sensing-

./: .gitignore  BiLSTM_encoder.py  LSTM_encoder.py  README.md  dataloader.py  download_NTU_FI_dataset.py  encoder_block.py  encoder_model.pth  main.py  model.py  playground.py  pyproject.toml  signature_model.pth  signature_model.py  testing.py
utils/: hampel_filter.py  track_cpu_consumption.py
