[project]
name = "wifi-sensing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "psutil>=7.0.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
